--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
   <head>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <link rel="stylesheet" href="twittler.css">
   </head>
   <body>
     <script src="twittler.js"></script>
+
   </body>
 </html>
