--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <script src="jquery.js"></script>
-    <script src="data_generator.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
+    <script src="data_generator.js"></script>
     <link rel="stylesheet" href="twittler.css">
   </head>
   <body>
