--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <script src="jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="data_generator.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Scope One' rel='stylesheet'>
     <link rel="stylesheet" href="twittler.css">
   </head>
   <body>
