Added styling and a banner *Re-organized tweets into a 'tweetlist' div *Re-factored tweet functions to account for above *Added banner and slug to the top of the site *Added styling to entire website

--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
     <script src="jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
     <script src="data_generator.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Amiko' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Scope One' rel='stylesheet'>
     <link rel="stylesheet" href="twittler.css">
   </head>
   <body>
     <script src="twittler.js"></script>
+    <div id = 'banner'>
+      <h1 id = 'logo'> Twittler! </h>
+      <div id = 'slug'>
+        <p>"It's definitely *not* twitter! (TM)"</p>
+      </div>
+    </div>
+    <div class = "tweetlist"></div>
 
   </body>
 </html>
