Implemented user tweets! *Added inputs for username and message in a new div under the banner *Added newTweet function to handle form input *Styled new section *Slightly modified data_generator.js to include a timestamp on new tweets

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
         <p>"It's definitely *not* twitter! (TM)"</p>
       </div>
     </div>
+    <div id = 'tweetbar'>
+      <form>
+        Username: <input id='user' type = 'text' maxlength="25">
+        Message: <input id = 'message' type = 'text' maxlength="90" size="80">
+        <input type="button" onclick="newTweet()" value="Twittle!">
+      </form>
+    </div>
     <div class = "tweetlist"></div>
 
   </body>
