--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       </div>
     </div>
     <div id = 'tweetbar'>
+      <p id = 'intro'>Welcome to Twittler! Click on a user's name to toggle their timeline. Or,
+        fill out the form to start twittling yourself!</p>
       <form>
         Username: <input id='user' type = 'text' maxlength="25">
         Message: <input id = 'message' type = 'text' maxlength="90" size="80">
